# collabmark

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  agent.md  docker-compose.authentik.yml  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml  requirements.prod.txt  requirements.txt
backend/app/: config.py  main.py  rate_limit.py
backend/app/auth/: api_key.py  cookie_utils.py  dependencies.py  google_oauth.py  jwt.py  scim_auth.py  sso_common.py  sso_oidc.py  sso_saml.py
backend/app/models/: api_key.py  comment.py  document.py  document_version.py  document_view.py  folder.py  group.py  notification.py  org_sso_config.py  organization.py  share_link.py  user.py
backend/app/routes/: auth.py  comments.py  documents.py  folders.py  keys.py  notifications.py  orgs.py  scim.py  sharing.py  users.py  versions.py  ws.py
backend/app/services/: acl_service.py  blob_storage.py  comment_service.py  crdt_store.py  document_service.py  folder_service.py  group_sharing_service.py  notification_dispatcher.py  notification_retry.py  notification_scheduler.py  org_service.py  scim_service.py  share_service.py  version_service.py
backend/app/services/channels/: base.py  email.py  templates.py
backend/app/utils/: owner_resolver.py
backend/app/ws/: handler.py
backend/tests/: conftest.py  test_acl.py  test_acl_groups.py  test_api_keys.py  test_auth.py  test_auth_unit.py  test_blob_storage.py  test_comments.py  test_crdt_store.py  test_document_attachments.py  test_document_images.py  test_document_service.py  test_documents.py  test_endpoint_security.py  test_file_validation.py  test_folders.py  test_groups.py  test_health.py  test_integration.py  test_notifications.py  test_org_boundary.py  test_orgs.py  test_readonly_fields.py  test_recently_viewed.py  test_scim_auth.py  test_scim_discovery.py  test_scim_groups.py  test_scim_routes.py  test_scim_service.py  test_security_fixes.py  test_share_service.py  test_sharing.py  test_sso.py  test_trash.py  test_users.py  test_version_service.py  test_versions.py  test_ws.py
cli/: README.md  pyproject.toml
cli/src/collabmark/: __init__.py  __main__.py  main.py  types.py
cli/src/collabmark/commands/: clean.py  conflicts.py  doctor.py  init.py  list_syncs.py  login.py  logout.py  logs.py  start.py  status.py  stop.py
cli/src/collabmark/lib/: __init__.py  api.py  auth.py  browser_auth.py  config.py  crdt_sync.py  daemon.py  logger.py  persistent_sync.py  registry.py  sync_engine.py  watcher.py
cli/tests/: conftest.py  test_api.py  test_auth.py  test_browser_auth.py  test_clean.py  test_config.py  test_conflicts.py  test_crdt_sync.py  test_daemon.py  test_doctor.py  test_integration.py  test_list_syncs.py  test_logger.py  test_login.py  test_logout.py  test_logs.py  test_main.py  test_offline.py  test_persistent_sync.py  test_registry.py  test_start.py  test_status.py  test_stop.py  test_sync_engine.py  test_watcher.py
docs/: api-reference.md  architecture.md  ci-cd.md  cli-reference.md  deployment.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+119 files in other folders)
