[project]
name = "collabmark-backend"
version = "1.0.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "ISC",  # flake8-implicit-str-concat
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "E402",    # module-import-not-at-top (FastAPI pattern: settings before models)
    "S101",    # assert used (ok in tests)
    "S105",    # hardcoded password (false positive on defaults)
    "S106",    # hardcoded password (false positive on defaults)
    "S110",    # try-except-pass (intentional in some cases)
    "S112",    # try-except-continue (intentional)
    "B008",    # function-call-in-default-argument (FastAPI Depends pattern)
    "RUF012",  # mutable-class-default (Beanie models use this pattern)
    "UP007",   # non-pep604-annotation (Optional[str] is fine)
    "UP045",   # non-pep604-annotation-optional (same)
    "UP042",   # replace-str-enum (StrEnum not in our Python target)
    "SIM108",  # if-else-block-instead-of-if-exp (readability preference)
    "SIM110",  # reimplemented-builtin (readability)
    "RET504",  # unnecessary-assign (readability)
    "ISC001",  # implicit-str-concat (conflicts with formatter)
    "N801",    # invalid-class-name (Document_ is intentional)
    "N817",    # camelcase-imported-as-acronym
    "E712",    # true-false-comparison (Beanie uses `== True`)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short -W ignore::DeprecationWarning -W ignore::UserWarning"
