[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collabmark"
version = "0.3.0"
description = "Sync markdown files with CollabMark cloud"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "watchdog>=4.0",
    "keyring>=25.0",
    "pycrdt>=0.12",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.scripts]
collabmark = "collabmark.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/collabmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "RUF"]
